Add tags to hide code

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -1,8 +1,7 @@
-# Table of content
-# Learn more at https://jupyterbook.org/customize/toc.html
-#
-- file: intro
+format: jb-article
+root: intro
+sections:
 - file: explanation
   sections:
-    - file: context
-    - file: individual-stats
+  - file: context
+  - file: individual-stats
